--- a/group-tdd-3/.gitignore
+++ b/group-tdd-3/.gitignore
@@ -1,7 +1,7 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
+#.gradle
+#build/
+#!gradle/wrapper/gradle-wrapper.jar
+#!**/src/main/**/build/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
