--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,9 @@ jobs:
         distribution: 'adopt'
 
     - name: Build with Gradle
-      run: ./gradlew test
+      run: |
+        # Gå till rätt katalog där gradlew finns
+        cd tdd-group3/group-tdd-3
+
+        # Kör gradlew test
+        ./gradlew test
