--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Set up Gradle
       run: |
-        chmod +x group-tdd-3/gradlew
+        #chmod +x group-tdd-3/gradlew
         cd group-tdd-3
 
     - name: Run Gradle Test
