changed yml file again

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,6 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew test
+    
+    - name: Verify gradlew file
+      run: ls -l ./gradlew
